* 2005-09-11 Jeremy Sanders <jeremy@jeremysanders.net>
	- Increase size of star, cross and triangle markers by 20%
	to match other markers better
	- Increase pentagon too
	- Start work to tie settings together
	
* 2005-08-30 Jeremy Sanders <jeremy@jeremysanders.net>
	- Time out splash logo
	- Use left click for panning instead of middle click. Left click
	after timeout changes cursor to panning cursor
	
* 2005-08-29 Jeremy Sanders <jeremy@jeremysanders.net>
	- Allow datasets to be linked to other datasets using expressions
	- Add SetDataExpression command
	- Modify create dataset and edit dataset dialogs to allow linked
	datasets
	- Add some other zoom icons
	
* 2005-08-20 Jeremy Sanders <jeremy@jeremysanders.net>
	- Change drop down lists to use grey rather than red
	- Allow user to click on widgets, and they are selected
	in the widget tree
	- Middle mouse button can scroll the plot window around
	
* 2005-08-03 Jeremy Sanders <jeremy@jeremysanders.net>
	- Add "scale" setting for TickLabels
	
* 2005-08-02 Jeremy Sanders <jeremy@jeremysanders.net>
	- Settings controls cleanups
	- Implement Axis setting (for choosing axes)
	- Show Marker pixmaps on drop down list
	
* 2005-07-29 Jeremy Sanders <jeremy@jeremysanders.net>
	- Add line styles pixmaps to drop down menu
	- Add colour pixmaps to drop down menu

* 2005-07-28 Jeremy Sanders <jeremy@jeremysanders.net>
	- Add colour choosing button
	- Put fill styles pixmap on drop down menu
	
* 2005-07-23 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fix PNG export without extension
	- Add Mandelbrot example
	- Released 0.7
	
* 2005-07-20 Jeremy Sanders <jeremy@jeremysanders.net>
	- Add support for blocks of data in import files
	- Add support for skipped columns using a comma
	
* 2005-07-19 Jeremy Sanders <jeremy@jeremysanders.net>
	- Document FITS import and 2D dataset commands
	
* 2005-07-18 Jeremy Sanders <jeremy@jeremysanders.net>
	- Make area around key smaller if no border
	